--- a/environment_ubuntu.yml
+++ b/environment_ubuntu.yml
@@ -116,5 +116,39 @@ dependencies:
   - xz=5.2.4=h14c3975_4
   - zeromq=4.2.5=hf484d3e_0
   - zlib=1.2.11=ha838bed_2
-prefix: /home/alberto/anaconda3/envs/ml
+  - pip:
+    - absl-py==0.5.0
+    - astor==0.7.1
+    - cycler==0.10.0
+    - dask==0.19.2
+    - gast==0.2.0
+    - grpcio==1.15.0
+    - h5py==2.8.0
+    - joblib==0.12.5
+    - kaggle==1.4.7.1
+    - keras==2.2.2
+    - keras-applications==1.0.4
+    - keras-preprocessing==1.0.2
+    - kiwisolver==1.0.1
+    - markdown==3.0.1
+    - matplotlib==3.0.0
+    - networkx==2.2
+    - numpy==1.15.2
+    - pandas==0.23.4
+    - pillow==5.3.0
+    - protobuf==3.6.1
+    - python-slugify==1.2.6
+    - pywavelets==1.0.1
+    - pyyaml==3.13
+    - scikit-image==0.14.1
+    - scikit-learn==0.20.0
+    - scipy==1.1.0
+    - sklearn==0.0
+    - tensorboard==1.11.0
+    - tensorflow-gpu==1.11.0
+    - termcolor==1.1.0
+    - toolz==0.9.0
+    - tqdm==4.26.0
+    - unidecode==1.0.22
+    - werkzeug==0.14.1
 
